<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_button"/>

    <Button
        android:id="@+id/error_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_button" />

    <Button
        android:id="@+id/dictionary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_button" />

    <Button
        android:id="@+id/tic_tac_toe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe_button"/>

    <Button
        android:id="@+id/recipes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version_code"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version_string"
        android:textSize="12sp" />

</LinearLayout>