<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#009688"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/one_player_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_player"/>

    <Button
        android:id="@+id/two_player_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_player"/>

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user"/>

    <Button
        android:id="@+id/fcm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_challenge_via_fcm"/>

</LinearLayout>