<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#009688"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ingredients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_ingredients"/>

<!--    <Button-->
<!--        android:id="@+id/add_recipe_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add_recipe"/>-->

<!--    <Button-->
<!--        android:id="@+id/add_review_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add_review"/>-->

    <Button
        android:id="@+id/search_recipes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_recipes"/>

    <Button
        android:id="@+id/recipes_bookmarked_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipes_bookmark_text"/>

    <Button
        android:id="@+id/recipes_data_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipes_data_manager"/>

    <Button
        android:id="@+id/ack_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ack_button" />

</LinearLayout>