<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#009688"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/browse_ingredient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipes_browse_all"/>

    <Button
        android:id="@+id/all_ingredients_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipes_search_by_current_ingredients"/>

<!--    <Button-->
<!--        android:id="@+id/random_recipe_search_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/recipes_feeling_lucky"/>-->

</LinearLayout>