<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/playerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/playerOne"
        app:layout_constraintLeft_toLeftOf="@+id/playerOne"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/playerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_goneMarginTop="5dp"
        />

    <TextView
        android:id="@+id/playerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/playerTwo"
        app:layout_constraintRight_toRightOf="@+id/playerTwo"
        android:layout_marginEnd="40dp"
        />

    <TextView
        android:id="@+id/playerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/playerOneScore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/playerStatus"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_height="240dp" />

    <Button
        android:id="@+id/resetGame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="#FFFFFF"
        android:text="@string/reset_game"
        android:backgroundTint="#E1470D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/ack_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ack_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetGame" />
</androidx.constraintlayout.widget.ConstraintLayout>